@@ -568,6 +568,9 @@ define,	   0x5BECE0,	0x5CD900,	0x5BE9F0,	"Unit_heal_at_start_of_turn",			"void (
 define,	   0x469590,	0x46BD40,	0x469610,	"check_online_skip_flag",			"bool (__stdcall *) (int unit_id)"
 inlead,	   0x448BF0,	0x44AB10,	0x448C70,	"Leader_ai_eval_technology",			"int (__fastcall *) (Leader * this, int edx, int id, bool param_2, bool param_3)"
 inlead,	   0x4446C0,	0x4464C0,	0x444740,	"Leader_ai_eval_government",			"int (__fastcall *) (Leader * this, int edx, int id)"
+define,	   0x474140,	0x0,		0x0,		"mp_despawn",					"void (__fastcall *) (void * this, int edx, int unit_id, int civ_id_responsible, byte param_3, byte param_4, byte param_5, byte param_6)"
+repl call, 0x5B483F,	0x0,		0x0,		"Unit_despawn_after_killed_by_nuke",		""
+repl call, 0x5B4832,	0x0,		0x0,		"mp_despawn_after_killed_by_nuke",		""
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
@@ -585,7 +588,6 @@ ignore,    0x5E7020,	0x5F6870,	0x0,		"General_clear",				"void (__fastcall *) (G
 ignore,	   0x4E5580,	0x0,		0x0,		"Main_Screen_Form_draw_city_hud",		"void (__fastcall *) (Main_Screen_Form * this, int edx, PCX_Image * canvas)"
 ignore,	   0x605010,	0x61C6A0,	0x604F00,	"Base_Form_impl_m01_Show_Enabled",		"void (__fastcall *) (Base_Form * this, int edx, byte flags)"
 ignore,	   0x74AF60,	0x0,		0x0,		"p_sync_object",				"void *"
-ignore,	   0x474140,	0x0,		0x0,		"mp_despawn",					"void (__fastcall *) (void * this, int edx, int unit_id, int civ_id_responsible, byte param_3, byte param_4, byte param_5, byte param_6)"
 ignore,    0x5C0E20,	0x5CF9C0,	0x5C0B30,	"Unit_begin_bombarding_tile",			"bool (__fastcall *) (Unit * this, int edx, int x, int y)"
 ignore,    0x57F623,	0x58C352,	0x57F383,	"ADDR_SUB_BUG_PATCH",				"void *"
 ignore,	   0x5B6CE0,	0x5C5670,	0x5B69F0,	"Unit_do_capture_units",			"bool (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int owner_civ_id)"
