@@ -568,3 +568,7 @@ exclude_invisible_units_from_stealth_attack = false
 
 ; Normally planting a forest always produces the regular non-LM forest terrain. This option changes that so it instead produces LM forest.
 convert_to_landmark_after_planting_forest = false
+
+; This option specifies how likely it is (in percent) for a unit with a maximum of one HP to be destroyed when struck by a nuke. Set to 100 for base
+; game behavior.
+chance_for_nukes_to_destroy_max_one_hp_units = 100
